testdata/language-features/guard/guard02.reject.out
type error: can not unify
  String
with
  ()
in ./testdata/language-features/guard/guard02.reject.lc:2:12:
  | True = ()
           ^^
------------ trace
!type error: can not unify
  String
with
  ()
in ./testdata/language-features/guard/guard02.reject.lc:2:12:
  | True = ()
           ^^
------------ tooltips
2:12-2:14
    ()
3:5-3:10
    Bool
3:5-3:15
    String
3:13-3:15
    String